components/ssdlb/controller/dr-files/dr-c.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: icap-service
  namespace: default
spec:
  hosts:
  - "icap.local"
  gateways:
  - icap-gateway
  http:
  - route:
    - destination:
        host: icap-service
        subset: c
      weight: 100
